# yabak

./: .gitignore  CMakeLists.txt  README.md
notes/: commands.md  fstree.md
src/: main.cpp  sha256.cpp  sha256.h
